api route, jwt.verify method, favicon, tokenInterdeptor, home.html, img for feature

--- a/src/app/components/User_Component/home/home.component.css
+++ b/src/app/components/User_Component/home/home.component.css
@@ -1,1 +1,8 @@
-/* No CSS *//*# sourceMappingURL=home.component.css.map */
+#home-component {
+  background-color: #FFFFFF;
+}
+
+#card-container {
+  background-color: #EFEEE2;
+}
+/*# sourceMappingURL=home.component.css.map */
