--- a/src/app/components/User_Component/home/home.component.html
+++ b/src/app/components/User_Component/home/home.component.html
@@ -1,5 +1,99 @@
-<div class="row">
-    <div class="col">
-        <h1 class="text-center">Hello {{user}}</h1>
+<div id="home-component" class="container">
+  <div id="card-container" class="row my-5">
+    <div class="col-lg-6 col-12">
+      <div class="card m-4">
+        <div class="card-header">
+          <h5>Purchase History</h5>
+        </div>
+        <div class="card-body">
+          <a href=""
+            >Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
+            alias!</a
+          >
+          <a href=""
+            >Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
+            alias!</a
+          >
+          <a href=""
+            >Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
+            alias!</a
+          >
+        </div>
+      </div>
+      <div class="card m-4">
+        <div class="card-header">
+          <h5>Billing & shipping addresses</h5>
+        </div>
+        <div class="card-body">
+          <a href=""
+            >Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
+            alias!</a
+          >
+          <a href=""
+            >Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
+            alias!</a
+          >
+        </div>
+      </div>
+      <div class="card m-4">
+        <div class="card-header">
+          <h5>Your list</h5>
+        </div>
+        <div class="card-body">
+          <a href=""
+            >Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
+            alias!</a
+          >
+          <a href=""
+            >Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
+            alias!</a
+          >
+          <a href=""
+            >Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
+            alias!</a
+          >
+        </div>
+      </div>
     </div>
+    <div class="col-lg-6 col-12">
+      <div class="card m-4">
+        <div class="card-header">
+          <h5>Account information</h5>
+        </div>
+        <div class="card-body">
+          <a href=""
+            >Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
+            alias!</a
+          >
+          <a href=""
+            >Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
+            alias!</a
+          >
+          <a href=""
+            >Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
+            alias!</a
+          >
+          <a href=""
+            >Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
+            alias!</a
+          >
+          <a href=""
+            >Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
+            alias!</a
+          >
+        </div>
+      </div>
+      <div class="card m-4">
+        <div class="card-header">
+          <h5>Need help?</h5>
+        </div>
+        <div class="card-body">
+          <a href=""
+            >Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
+            alias!</a
+          >
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
