--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -11,121 +11,246 @@
     </div>
 </nav> -->
 
-<nav id="navbar" class="navbar navbar-expand-lg p-4">
-    <div class="col-lg-4">
-        <div class="row">
-            <a class="navbar-brand navbar-item" [routerLink]="['/']">Cartify</a>
-            <button class="navbar-toggler ml-auto custom-toggler" type="button" data-toggle="collapse" data-target="#toggleContent">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-        </div>
+<nav id="navbar" class="navbar navbar-expand-lg px-4">
+  <div class="col-lg-4">
+    <div class="row">
+      <a class="navbar-brand navbar-item" [routerLink]="['/cartify']"
+        ><img id="brand-logo" src="./../../../favicon.png"
+      /></a>
+
+      <button
+        class="navbar-toggler ml-auto custom-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#toggleContent"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
     </div>
-    <div class="collapse navbar-collapse col-lg-4 flex-center" id="toggleContent">
-        <div class="row">
-            <ul class="navbar-nav">
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle navbar-item" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Collections
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Men</a>
-                        <a class="dropdown-item" href="#">Women</a>
-                    <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">On sale</a>
-                    </div>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link navbar-item" href="#">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link navbar-item" href="#">Link</a>
-                </li>
-            </ul>
-        </div>
+  </div>
+  <div class="collapse navbar-collapse col-lg-4 flex-center" id="toggleContent">
+    <div class="row">
+      <ul class="navbar-nav">
+        <li class="nav-item dropdown">
+          <a
+            class="nav-link dropdown-toggle navbar-item"
+            href="#"
+            id="navbarDropdown"
+            role="button"
+            data-toggle="dropdown"
+            aria-haspopup="true"
+            aria-expanded="false"
+          >
+            Collections
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a
+              [routerLink]="['user/home/profile']"
+              class="nav-link navbar-item dropdown-item"
+              role="button"
+              aria-haspopus="true"
+              aria-expanded="false"
+              >Special</a
+            >
+            <a
+              [routerLink]="['user/home/profile2']"
+              class="nav-link navbar-item dropdown-item"
+              role="button"
+              aria-haspopus="true"
+              aria-expanded="false"
+              >Unspecial</a
+            >
+            <a class="dropdown-item" href="#">Men</a>
+            <a class="dropdown-item" href="#">Women</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">On sale</a>
+          </div>
+        </li>
+        <li class="nav-item">
+          <a
+            [routerLink]="['cartify/home']"
+            class="nav-link navbar-item"
+            href="#"
+            >Home <span class="sr-only"></span
+          ></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link navbar-item" href="#">Link</a>
+        </li>
+      </ul>
     </div>
-    <div class="collapse navbar-collapse col-lg-4 flex-end" id="toggleContent">
-        <div class="row">
-            <ul class="navbar-nav">
-                <li class="nav-item">       
-                    <a class="nav-link navbar-item nav-item" data-toggle="modal" data-target="#modalForm" role="button" aria-expanded="false" aria-controls="collapseExample">SIGN IN<i class="fa fa-user ml-2"></i></a>
-                    <!-- <a class="nav-link navbar-item nav-item" data-toggle="modal" data-target="#elegantModalForm" href="#collapseLogReg" role="button" aria-expanded="false" aria-controls="collapseExample">LOG OUT<i class="fa fa-user ml-2"></i></a> -->
-                    <!-- <a *ngIf="currUser.token == token"  class="nav-link navbar-item nav-item" data-toggle="collapse" href="#collapseLogReg" role="button" aria-expanded="false" aria-controls="collapseExample">SIGN IN<i class="fa fa-user ml-2"></i></a> -->
-                </li>          
-                <li class="nav-item">
-                    <button class="btn btn-secondary" (click)="logout()">LOGOUT</button>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link navbar-item nav-item" href="">STORES<i class="fas fa-map-marker-alt ml-2"></i></a>
-                </li>          
-                <li class="nav-item">
-                    <a class="nav-link navbar-item nav-item" href="">CART<i class="fas fa-cart-plus ml-2"></i></a>
-                </li>            
-            </ul>
-        </div>
+  </div>
+  <div class="collapse navbar-collapse col-lg-4 flex-end" id="toggleContent">
+    <div class="row">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a
+            id="login"
+            *ngIf="!_authService.loggedIn()"
+            class="nav-link navbar-item"
+            data-toggle="modal"
+            data-target="#modalForm"
+            role="button"
+            aria-expanded="false"
+            aria-controls="collapseExample"
+            >SIGN IN<i class="fa fa-user ml-2"></i
+          ></a>
+        </li>
+        <ng-container *ngIf="_authService.loggedIn()">
+          <li class="nav-item dropdown">
+            <a
+              class="nav-link navbar-item dropdown nav-item"
+              role="button"
+              data-toggle="dropdown"
+              aria-haspopup="true"
+              aria-expanded="false"
+              >Profile<i class="fa fa-user ml-2"></i
+            ></a>
+            <div class="dropdown-menu" aria-labelledby="rightDropdown">
+              <a
+                (click)="selectAccount(currUser.user._id)"
+                class="dropdown-item"
+                >Account</a
+              >
+              <a
+                [routerLink]="['cartify']"
+                class="dropdown-item"
+                (click)="_authService.logoutUser()"
+                >Logout</a
+              >
+            </div>
+          </li>
+        </ng-container>
+        <li class="nav-item">
+          <a class="nav-link navbar-item"
+            >STORES<i class="fas fa-map-marker-alt ml-2"></i
+          ></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link navbar-item"
+            >CART<i class="fas fa-shopping-cart ml-2"></i
+          ></a>
+        </li>
+      </ul>
     </div>
+  </div>
 </nav>
 
 <!-- Modal -->
-<div class="modal fade hide" id="modalForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <!--Content-->
-        <div class="modal-content">
-            <!--Header-->
-            <div class="modal-header text-center">
-                <h3 class="modal-title w-100 dark-grey-text font-weight-bold my-3" id="myModalLabel"><strong>Sign in</strong></h3>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span (click)="resetLogin()" aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <!--Body-->
-            <div class="modal-body mx-4">
-                <!--Form-->
-                <form (ngSubmit)="login(formData)" #formData="ngForm" class="needs-validation" novalidate>
-                    <div class="mb-4 form-group input-group input-group-lg">
-                        <input type="email" class=" mt-3 form-control form-control-lg"
-                        [class.is-invalid]="email.dirty && email.invalid"
-                        required
-                        pattern='^([\w-\.]+@([\w-]+\.)+[\w-]{2,4})?$'
-                        name="oldUser.email" 
-                        [(ngModel)]="oldUser.email" 
-                        placeholder="Your email"
-                        #email="ngModel"
-                        >
-                    </div>
-                    <div class="mb-5 form-group input-group input-group-lg">
-                        <input type="password" class="form-control form-control-lg"
-                        required
-                        [(ngModel)]="oldUser.password"
-                        name="oldUser.password"
-                        placeholder="Your password"
-                        #password="ngModel"
-                        >
-                    </div>
-                    <p *ngFor="let error of errors" class="text-danger"><i class="fas fa-times"></i> {{error}}</p>      
-                    <div class="text-centermb-3 form-group">
-                        <button type="submit" class="btn btn-signin rounded-pill p-3 text-uppercase font-weight-bold btn-block"><i class="fas fa-power-off pr-1"></i>Sign in</button>
-                    </div>
+<div
+  class="modal fade hide fade-scale"
+  id="modalForm"
+  tabindex="-1"
+  role="dialog"
+  aria-labelledby="myModalLabel"
+  aria-hidden="true"
+>
+  <div class="modal-dialog" role="document">
+    <!--Content-->
+    <div class="modal-content">
+      <!--Header-->
+      <div class="modal-header text-center">
+        <h3
+          class="modal-title w-100 dark-grey-text font-weight-bold my-3"
+          id="myModalLabel"
+        >
+          <strong>Sign in</strong>
+        </h3>
+        <button
+          type="button"
+          class="close"
+          data-dismiss="modal"
+          aria-label="Close"
+        >
+          <span (click)="resetLogin()" aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <!--Body-->
+      <div class="modal-body mx-4">
+        <!--Form-->
+        <form
+          (ngSubmit)="login(formData)"
+          #formData="ngForm"
+          class="needs-validation"
+          novalidate
+        >
+          <div class="mb-4 form-group input-group input-group-lg">
+            <input
+              type="email"
+              class=" mt-3 form-control form-control-lg"
+              [class.is-invalid]="email.dirty && email.invalid"
+              required
+              pattern="^([\w-\.]+@([\w-]+\.)+[\w-]{2,4})?$"
+              name="oldUser.email"
+              [(ngModel)]="oldUser.email"
+              placeholder="Your email"
+              #email="ngModel"
+            />
+          </div>
+          <div class="mb-5 form-group input-group input-group-lg">
+            <input
+              type="password"
+              class="form-control form-control-lg"
+              required
+              [(ngModel)]="oldUser.password"
+              name="oldUser.password"
+              placeholder="Your password"
+              #password="ngModel"
+            />
+          </div>
+          <p *ngFor="let error of errors" class="text-danger">
+            <i class="fas fa-times"></i> {{ error }}
+          </p>
+          <div class="text-centermb-3 form-group">
+            <button
+              id="sign-in-btn"
+              type="submit"
+              class="btn btn-signin rounded-pill p-3 text-uppercase font-weight-bold btn-block"
+            >
+              <i class="fas fa-power-off pr-1"></i>Sign in
+            </button>
+          </div>
 
-                    <div class="m-2 form-group">
-                        <p class="h3 text-center">OR</p>
-                    </div>
-                    
-                    <p class="font-small dark-grey-text text-right font-weight-bold d-flex justify-content-center mb-3 pt-2" >Sign in with:</p>
-                    <!-- <p class="font-small dark-grey-text text-right font-weight-bold d-flex justify-content-center mb-3 pt-2" onclick="$('.modal').modal('hide')">Sign in with:</p> -->
-                    <div class="row my-3 d-flex justify-content-center">
-                        <!--Facebook-->
-                        <button type="button" class="btn btn-white btn-facebook m-3 rounded-circle shadow"><i class="fab fa-facebook-f"></i></button>
-                        <!--Google +-->
-                        <button [routerLink]="['/oauth/google']" type="button" class="btn btn-white btn-google m-3 rounded-circle shadow"><i class="fab fa-google-plus-g"></i></button>
-                    </div>
-                </form>
-            </div>
-            <!--Footer-->
-            <div class="modal-footer mx-5 pt-3 mb-1">
-                <p class="font-small grey-text d-flex justify-content-end">Not a member?<p><a [routerLink]="['registration']" data-dismiss="modal">Sign Up</a></p>
-            </div>
-        </div>
-        <!--/.Content-->
+          <div class="m-2 form-group">
+            <p class="h3 text-center">OR</p>
+          </div>
+
+          <p
+            class="font-small dark-grey-text text-right font-weight-bold d-flex justify-content-center mb-3 pt-2"
+          >
+            Sign in with:
+          </p>
+          <!-- <p class="font-small dark-grey-text text-right font-weight-bold d-flex justify-content-center mb-3 pt-2" onclick="$('.modal').modal('hide')">Sign in with:</p> -->
+          <div class="row my-3 d-flex justify-content-center">
+            <!--Facebook-->
+            <button
+              type="button"
+              class="btn btn-white btn-facebook m-3 rounded-circle shadow"
+            >
+              <i class="fab fa-facebook-f"></i>
+            </button>
+            <!--Google +-->
+            <button
+              [routerLink]="['/oauth/google']"
+              type="button"
+              class="btn btn-white btn-google m-3 rounded-circle shadow"
+            >
+              <i class="fab fa-google-plus-g"></i>
+            </button>
+          </div>
+        </form>
+      </div>
+      <!--Footer-->
+      <div class="modal-footer mx-5 pt-3 mb-1">
+        <p class="font-small grey-text d-flex justify-content-end">
+          Not a member?
+        </p>
+        <p>
+          <a [routerLink]="['registration']" data-dismiss="modal">Sign Up</a>
+        </p>
+      </div>
     </div>
+    <!--/.Content-->
+  </div>
 </div>
 <!-- Modal -->
