--- a/src/app/components/page-not-found/page-not-found.component.html
+++ b/src/app/components/page-not-found/page-not-found.component.html
@@ -1,5 +1,5 @@
-<div class="row pt-5">
-    <div class="col-12">
-        <h1 class="text-center">Error 404. Sorry, page cant found.</h1>
-    </div>
+<div class="row p-5">
+  <div class="col-12">
+    <h1 class="text-center">Error 404. Sorry, page cant found.</h1>
+  </div>
 </div>
