require first and last name, fonts, most of http.service are moved to user service, added user service, account component can acquire params

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,1 +1,2 @@
-/* No CSS *//*# sourceMappingURL=app.component.css.map */
+@import url("https://fonts.googleapis.com/css?family=Archivo+Black|Domine:700|Roboto|Roboto+Slab:700&display=swap");
+/*# sourceMappingURL=app.component.css.map */
