--- a/src/app/components/feature/feature.component.html
+++ b/src/app/components/feature/feature.component.html
@@ -66,8 +66,9 @@
     </div>
   </div>
   <div class="col-lg-6 col-12 text-center p-5">
-    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione sint ipsam
-    nam, repellendus quis fugit officia repellat adipisci, velit pariatur
-    dolores vel inventore laudantium provident et autem voluptas, a optio?
+    <h2 class="font-weight-bold">Looks the same. Made a whole lot smarter.</h2>
+    <p>
+      Outdoor gear that makes you smarter by being safer. Shop
+    </p>
   </div>
 </div>
