--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css?family=Domine:700|Roboto|Roboto+Slab:300&display=swap");
 #navbar {
   background-color: #000000;
 }
@@ -9,6 +10,7 @@
 
 .nav-item,
 .navbar-item {
+  font-family: "Roboto Slab", serif;
   color: #fff;
   cursor: pointer;
 }
