--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -1,3 +1,16 @@
+@import url('https://fonts.googleapis.com/css?family=Domine:700|Roboto|Roboto+Slab:300&display=swap');
+$font-nav:'Roboto Slab',
+serif;
+
+$font-h1:'Domine',
+serif;
+
+$font-generic:'Roboto',
+sans-serif;
+
+$font-h2:'Archivo Black',
+sans-serif;
+
 #navbar {
   background-color: #000000;
 }
@@ -9,6 +22,7 @@
 
 .nav-item,
 .navbar-item {
+  font-family: $font-nav;
   color: #fff;
 
   &:hover {
@@ -48,34 +62,24 @@
 
 .custom-toggler .navbar-toggler-icon {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255, 0.9)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
-  // background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,102,203, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
 }
 
 .custom-toggler.navbar-toggler {
-  // border-color: rgb(255,102,203);
   border-color: #fff;
 }
 
-// #collapseLogReg {
-//     z-index: 1;
-// }
-
 .btn-signin {
-  // border-radius: 10em;
   background-image: linear-gradient(to right, #c1c161 0%, #c1c161 0%, #d4d4b1 100%);
-  ;
 }
 
 .btn-google,
 .btn-facebook {
-  // border-radius: 10em;
   border: lightblue 3px solid;
 
   .fa-google-plus-g,
   .fa-facebook-f {
     color: lightblue;
     padding: 1em;
-    // text-shadow:2px;
   }
 }
 
