--- a/src/app/components/register/register.component.css
+++ b/src/app/components/register/register.component.css
@@ -1,7 +1,7 @@
-@import url("https://fonts.googleapis.com/css?family=Roboto+Slab:700&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Domine:700|Roboto+Slab:700&display=swap");
 h1 {
-  font-family: "Roboto Slab", serif;
-  font-size: 50px;
+  font-family: "Domine", serif;
+  font-size: 40px;
   line-height: 1.3;
 }
 
