--- a/src/app/components/register/register.component.scss
+++ b/src/app/components/register/register.component.scss
@@ -1,19 +1,23 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto+Slab:700&display=swap');
-$font-header:'Roboto Slab', serif;
+@import url('https://fonts.googleapis.com/css?family=Domine:700|Roboto+Slab:700&display=swap');
+$font-nav:'Roboto Slab',
+serif;
+
+$font-h1:'Domine',
+serif;
 
 h1 {
-    font-family: $font-header;
-    font-size:50px;
-    line-height:1.3;
+  font-family: $font-h1;
+  font-size: 40px;
+  line-height: 1.3;
 }
 
-.asterisk-label:before{
-    color: red;
-    content: "*";
-    position: absolute;
-    margin-left: -10px;
+.asterisk-label:before {
+  color: red;
+  content: "*";
+  position: absolute;
+  margin-left: -10px;
 }
 
 small {
-    margin-left:10px;
+  margin-left: 10px;
 }
