--- a/src/app/components/welcome/welcome.component.css
+++ b/src/app/components/welcome/welcome.component.css
@@ -1,1 +1,2 @@
-/* No CSS *//*# sourceMappingURL=welcome.component.css.map */
+@import url("https://fonts.googleapis.com/css?family=Domine:700|Roboto|Roboto+Slab:300&display=swap");
+/*# sourceMappingURL=welcome.component.css.map */
