--- a/src/app/components/feature/feature.component.html
+++ b/src/app/components/feature/feature.component.html
@@ -1,74 +1,33 @@
 <div id="feature" class="row p-2">
-  <div class="col-lg-6 col-12 text-center p-5">
-    <div
-      id="carouselSlides"
-      class="carousel slide carousel-fade"
-      data-ride="carousel"
-    >
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img
-            class="d-block w-100 peopleCarouselImg"
-            src="./../../../assets/img/caffeine-cellphone.jpg"
-            alt="1 slide"
-          />
+  <div class="col-lg-6 col-12">
+    <div class="card mb-3">
+      <img src="./../../../assets/img/men-outfit.jpg" class="card-img-top" />
+      <div class="row">
+        <div class="col-lg-6 text-center">
+          <div class="card-body">
+            <p class="card-text font-weight-bold mb-0 pokodotted">$32.99</p>
+            <p class="card-text">
+              <small class="text-dark">Pokodotted shirt</small>
+            </p>
+          </div>
         </div>
-        <div class="carousel-item">
-          <img
-            class="d-block w-100 peopleCarouselImg"
-            src="./../../../assets/img/men-outfit.jpg"
-            alt="2 slide"
-          />
-        </div>
-        <div class="carousel-item">
-          <img
-            class="d-block w-100 peopleCarouselImg"
-            src="./../../../assets/img/automobile.jpg"
-            alt="3 slide"
-          />
-        </div>
-        <div class="carousel-item">
-          <img
-            class="d-block w-100 peopleCarouselImg"
-            src="./../../../assets/img/adorable.jpg"
-            alt="4 slide"
-          />
-        </div>
-        <div class="carousel-item">
-          <img
-            class="d-block w-100 peopleCarouselImg"
-            src="./../../../assets/img/nike.jpg"
-            alt="5 slide"
-          />
-        </div>
-        <div class="carousel-item">
-          <img
-            class="d-block w-100 peopleCarouselImg"
-            src="./../../../assets/img/blue-jeans.jpg"
-            alt="6 slide"
-          />
-        </div>
-        <div class="carousel-item">
-          <img
-            class="d-block w-100 peopleCarouselImg"
-            src="./../../../assets/img/fila.jpg"
-            alt="7 slide"
-          />
-        </div>
-        <div class="carousel-item">
-          <img
-            class="d-block w-100 peopleCarouselImg"
-            src="./../../../assets/img/men-outfit.jpg"
-            alt="8 slide"
-          />
+        <div class="col-lg-6">
+          <div class="card-body">
+            <p class="card-text font-weight-bold mb-0">$52.99</p>
+            <p class="card-text">
+              <small class="text-dark">Brown shoes</small>
+            </p>
+          </div>
         </div>
       </div>
     </div>
   </div>
-  <div class="col-lg-6 col-12 text-center p-5">
+  <div class="col-lg-6 col-12  my-auto p-5">
     <h2 class="font-weight-bold">Looks the same. Made a whole lot smarter.</h2>
     <p>
-      Outdoor gear that makes you smarter by being safer. Shop
+      Lookout for Fall clothing collection coming out soon next month! While
+      you're at it, checkout for sales from
+      <span><a href="#">last season's lineup.</a></span>
     </p>
   </div>
 </div>
