--- a/src/app/components/slider/slider.component.html
+++ b/src/app/components/slider/slider.component.html
@@ -1,1 +1,5 @@
-<p>slider works!</p>
+<div class="row">
+  <div *ngFor="let product of products" class="col">
+    <h3>Product name:{{ product.name }}</h3>
+  </div>
+</div>
