--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,73 +1,83 @@
-<div id="footer" class="row  text-white">
-    <div class="container">
-        <div class="col-12">
-            <div class="row">
-                <div class="col-lg-6 col-12 p-5">
-                    <ul>
-                        <li>
-                            <p class="text-left text-uppercase list-header text-print">Become a member and get 10% discount on your first purchase</p>
-                            <p class="text-print">Sign up now and recieve a 10% discount on your first purchase! Members also get a chance to win a $50 gift card every month.</p>
-                            <small class="text-print">* Only with purchasess more than $50</small>
-                        </li>
-                    </ul>
-                </div>
-                <div class="col-lg-6 col-12 p-5">
-                    <ul>
-                        <li>
-                            <p class="text-left text-uppercase list-header">Apply for a mastercard</p>
-                            <p class="text-print">Get 1% cash back on all purchases and 2% everytime you fill up your gass. Low APR rating. No sign up fee. 24/7 support helpline</p>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-            <div id="footer" class="row">
-                <div class="col-lg-3 col-12 p-5">
-                    <ul>
-                        <li class="text-print">Lorem ipsum dolor sit amet.</li>
-                        <li class="text-print">Lorem ipsum dolor sit amet.</li>
-                        <li class="text-print">Lorem ipsum dolor sit amet.</li>
-                        <li class="text-print">Lorem ipsum dolor sit amet.</li>
-                        <li class="text-print">Lorem ipsum dolor sit amet.</li>
-                    </ul>
-                </div>
-                <div class="col-lg-3 col-12 p-5">
-                    <ul>
-                        <li class="text-print">Lorem ipsum dolor sit amet.</li>
-                        <li class="text-print">Lorem ipsum dolor sit amet.</li>
-                        <li class="text-print">Lorem ipsum dolor sit amet.</li>
-                        <li class="text-print">Lorem ipsum dolor sit amet.</li>
-                        <li class="text-print">Lorem ipsum dolor sit amet.</li>
-                    </ul>   
-                </div>
-                <div class="col-lg-3 col-12 p-5">
-                    <ul>
-                        <li class="text-print">Lorem ipsum dolor sit amet.</li>
-                        <li class="text-print">Lorem ipsum dolor sit amet.</li>
-                        <li class="text-print">Lorem ipsum dolor sit amet.</li>
-                        <li class="text-print">Lorem ipsum dolor sit amet.</li>
-                        <li class="text-print">Lorem ipsum dolor sit amet.</li>
-                    </ul>       
-                </div>
-                <div class="col-lg-3 col-12 p-5">
-                    <ul>
-                        <li class="text-print">Lorem ipsum dolor sit amet.</li>
-                        <li class="text-print">Lorem ipsum dolor sit amet.</li>
-                        <li class="text-print">Lorem ipsum dolor sit amet.</li>
-                        <li class="text-print">Lorem ipsum dolor sit amet.</li>
-                        <li class="text-print">Lorem ipsum dolor sit amet.</li>
-                    </ul>       
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12 p-5">
-                    <p class="text-print">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga delectus a magni nam deserunt. Nemo voluptatibus id excepturi distinctio unde.</p>
-                </div>
-            </div>
-            <div class="row footer-contact">
-                <div class="col-12 p-5">
-                    <p class="text-print">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo autem corporis deserunt eaque delectus enim aut nesciunt rem repellat error.</p>
-                </div>
-            </div>
-        </div>
-    </div>
+<div id="footer" class="row">
+  <div class="col-lg-6 col-12 p-5">
+    <ul>
+      <li>
+        <p class="text-left text-uppercase list-header text-print">
+          Become a member and get 10% discount on your first purchase
+        </p>
+        <p class="text-print">
+          Sign up now and recieve a 10% discount on your first purchase! Members
+          also get a chance to win a $50 gift card every month.
+        </p>
+        <small class="text-print">* Only with purchasess more than $50</small>
+      </li>
+    </ul>
+  </div>
+  <div class="col-lg-6 col-12 p-5">
+    <ul>
+      <li>
+        <p class="text-left text-uppercase list-header">
+          Apply for a mastercard
+        </p>
+        <p class="text-print">
+          Get 1% cash back on all purchases and 2% everytime you fill up your
+          gass. Low APR rating. No sign up fee. 24/7 support helpline
+        </p>
+      </li>
+    </ul>
+  </div>
+</div>
+<div id="footer" class="row">
+  <div class="col-lg-3 col-12 p-5">
+    <ul>
+      <li class="text-print">Lorem ipsum dolor sit amet.</li>
+      <li class="text-print">Lorem ipsum dolor sit amet.</li>
+      <li class="text-print">Lorem ipsum dolor sit amet.</li>
+      <li class="text-print">Lorem ipsum dolor sit amet.</li>
+      <li class="text-print">Lorem ipsum dolor sit amet.</li>
+    </ul>
+  </div>
+  <div class="col-lg-3 col-12 p-5">
+    <ul>
+      <li class="text-print">Lorem ipsum dolor sit amet.</li>
+      <li class="text-print">Lorem ipsum dolor sit amet.</li>
+      <li class="text-print">Lorem ipsum dolor sit amet.</li>
+      <li class="text-print">Lorem ipsum dolor sit amet.</li>
+      <li class="text-print">Lorem ipsum dolor sit amet.</li>
+    </ul>
+  </div>
+  <div class="col-lg-3 col-12 p-5">
+    <ul>
+      <li class="text-print">Lorem ipsum dolor sit amet.</li>
+      <li class="text-print">Lorem ipsum dolor sit amet.</li>
+      <li class="text-print">Lorem ipsum dolor sit amet.</li>
+      <li class="text-print">Lorem ipsum dolor sit amet.</li>
+      <li class="text-print">Lorem ipsum dolor sit amet.</li>
+    </ul>
+  </div>
+  <div class="col-lg-3 col-12 p-5">
+    <ul>
+      <li class="text-print">Lorem ipsum dolor sit amet.</li>
+      <li class="text-print">Lorem ipsum dolor sit amet.</li>
+      <li class="text-print">Lorem ipsum dolor sit amet.</li>
+      <li class="text-print">Lorem ipsum dolor sit amet.</li>
+      <li class="text-print">Lorem ipsum dolor sit amet.</li>
+    </ul>
+  </div>
+</div>
+<div id="footer" class="row">
+  <div class="col-12 p-5">
+    <p class="text-print">
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga delectus a
+      magni nam deserunt. Nemo voluptatibus id excepturi distinctio unde.
+    </p>
+  </div>
+</div>
+<div id="footer" class="row footer-contact">
+  <div class="col-12 p-5">
+    <p class="text-print">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo autem
+      corporis deserunt eaque delectus enim aut nesciunt rem repellat error.
+    </p>
+  </div>
 </div>
