--- a/src/app/components/trending/trending.component.scss
+++ b/src/app/components/trending/trending.component.scss
@@ -1,3 +1,30 @@
+@import url('https://fonts.googleapis.com/css?family=Domine:700|Roboto|Roboto+Slab:300&display=swap');
+$font-nav:'Roboto Slab',
+serif;
+
+$font-h1:'Domine',
+serif;
+
+$font-generic:'Roboto',
+sans-serif;
+
+$font-h2:'Archivo Black',
+sans-serif;
+
 #trending {
-    background-color:#d8d8d8;
+  background-color: #d8d8d8;
 }
+
+h2 {
+  font-family: $font-h2;
+}
+
+#rock-climber {
+  object-fit: cover;
+  width: 100%;
+  height: 250px;
+}
+
+// .row-full {
+//   width: 100vw;
+// }
