--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -93,11 +93,7 @@
       </div>
       <div class="row">
         <div class="col">
-          <button
-            type="submit"
-            class="btn btn-info mt-3"
-            [disabled]="formData.invalid"
-          >
+          <button type="submit" class="btn mt-3" [disabled]="formData.invalid">
             Create Account
           </button>
         </div>
