--- a/src/app/components/register/register.component.scss
+++ b/src/app/components/register/register.component.scss
@@ -1,9 +1,17 @@
-@import url('https://fonts.googleapis.com/css?family=Domine:700|Roboto+Slab:700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Archivo+Black|Domine:700|Roboto|Roboto+Slab:700&display=swap');
+
+$font-h2:'Archivo Black',
+sans-serif;
+
 $font-nav:'Roboto Slab',
 serif;
 
 $font-h1:'Domine',
 serif;
+
+$font-generic:'Roboto',
+sans-serif;
+
 
 h1 {
   font-family: $font-h1;
@@ -20,4 +28,9 @@ h1 {
 
 small {
   margin-left: 10px;
+}
+
+button {
+  background-color: #426C90;
+  color: #ffff;
 }
