--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -104,7 +104,7 @@
               data-toggle="dropdown"
               aria-haspopup="true"
               aria-expanded="false"
-              >Profile<i class="fa fa-user ml-2"></i
+              >My Account<i class="fa fa-user ml-2"></i
             ></a>
             <div class="dropdown-menu" aria-labelledby="rightDropdown">
               <a
