--- a/src/app/components/slider/slider.component.css
+++ b/src/app/components/slider/slider.component.css
@@ -1,1 +1,2 @@
-/* No CSS *//*# sourceMappingURL=slider.component.css.map */
+@import url("https://fonts.googleapis.com/css?family=Archivo+Black|Domine:700|Roboto|Roboto+Slab:700&display=swap");
+/*# sourceMappingURL=slider.component.css.map */
