--- a/src/app/components/trending/trending.component.css
+++ b/src/app/components/trending/trending.component.css
@@ -8,6 +8,9 @@ h2 {
 }
 
 #rock-climber {
-  background: url("./../../../assets/img/rock_climber.jpg");
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: 250px;
 }
 /*# sourceMappingURL=trending.component.css.map */
