--- a/src/app/components/User_Component/home/home.component.scss
+++ b/src/app/components/User_Component/home/home.component.scss
@@ -1,7 +1,47 @@
+@import url('https://fonts.googleapis.com/css?family=Archivo+Black|Domine:700|Roboto|Roboto+Condensed|Roboto+Slab:700&display=swap');
+
+$font-h1:'Domine',
+serif;
+$font-h2:'Archivo Black',
+sans-serif;
+$font-h5:'Roboto Condensed',
+sans-serif;
+
+$font-nav:'Roboto Slab',
+serif;
+
+$font-generic:'Roboto',
+sans-serif;
+
+
+h1 {
+  font-family: $font-h1;
+}
+
+h5 {
+  font-family: $font-h5;
+}
+
+p {
+  font-family: $font-generic;
+}
+
+a {
+  font-family: $font-generic;
+}
+
+ul {
+  padding-left: 0px;
+}
+
 #home-component {
-    background-color:#FFFFFF
+  background-color: #FFFFFF
 }
 
 #card-container {
-    background-color:#EFEEE2;
+  background-color: #EFEEE2;
+}
+
+.account-info {
+  list-style-type: none;
 }
