--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -10,7 +10,7 @@ $text-color: #CCC;
   background-color: #000;
 }
 
-.row {
+.underline-row {
   border-bottom: solid 1px #666;
 
   &:last-child {
@@ -22,10 +22,38 @@ $text-color: #CCC;
   color: $text-color;
 }
 
+p {
+  padding-top: 10px;
+  line-height: 1.5;
+}
+
 ul {
   list-style: none;
 }
 
 .list-header {
   color: #a1c900;
+}
+
+a,
+i {
+  color: $text-color
+}
+
+.contact-info {
+  text-decoration: none;
+
+  p {
+    font-size: 20px;
+  }
+}
+
+.learn-more {
+  text-decoration: underline;
+}
+
+.push-icon {
+  color: #ffff;
+  padding-left: 10px;
+  color: $text-color;
 }
