--- a/src/app/components/trending/trending.component.css
+++ b/src/app/components/trending/trending.component.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Domine:700|Roboto|Roboto+Slab:300&display=swap");
 #trending {
-  background-color: #d8d8d8;
+  background-color: #fff;
 }
 
 h2 {
@@ -8,9 +8,9 @@ h2 {
 }
 
 #rock-climber {
-  -o-object-fit: cover;
-     object-fit: cover;
-  width: 100%;
-  height: 250px;
+  -o-object-fit: scale-down;
+     object-fit: scale-down;
+  width: auto;
+  height: auto;
 }
 /*# sourceMappingURL=trending.component.css.map */
