--- a/src/app/components/trending/trending.component.html
+++ b/src/app/components/trending/trending.component.html
@@ -1,146 +1,132 @@
 <div id="trending" class="row">
-  <img
-    id="rock-climber"
-    src="./../../../assets/img/rock_climber.jpg"
-    alt="rock climber"
-  />
-</div>
-<div class="row">
-  <div class="col-12 text-center pb-5">
+  <div class="col-6 text-center my-auto">
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, facilis
     omnis. Id recusandae aliquid dolores, nulla officiis iste neque nihil aut
     voluptates quam ducimus veniam necessitatibus consequuntur odio error autem.
     Et, distinctio sequi. Nihil ad itaque dolor aspernatur, non quo?
-  </div>
-</div>
-<div class="row">
-  <div class="col-12 text-center pb-5">
-    <button class="btn btn-primary">Shop electric bikes</button>
-  </div>
-</div>
-<div id="feature" class="row p-2">
-  <div class="col-lg-6 col-12 text-center p-5 my-auto">
-    <h2 class="font-weight-bold">Looks the same. Made a whole lot smarter.</h2>
-    <p>
-      Outdoor gear that makes you smarter by being safer. Shop
-    </p>
-  </div>
-  <div class="col-lg-6 col-12 text-center p-5">
-    <div
-      id="carouselSlides"
-      class="carousel slide carousel-fade"
-      data-ride="carousel"
-    >
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img
-            class="d-block w-100 peopleCarouselImg"
-            src="./../../../assets/img/caffeine-cellphone.jpg"
-            alt="1 slide"
-          />
-        </div>
-        <div class="carousel-item">
-          <!-- <a
-            style='background-color:black;color:white;text-decoration:none;padding:4px 6px;font-family:-apple-system, BlinkMacSystemFont, "San Francisco", "Helvetica Neue", Helvetica, Ubuntu, Roboto, Noto, "Segoe UI", Arial, sans-serif;font-size:12px;font-weight:bold;line-height:1.2;display:inline-block;border-radius:3px'
-            href="https://unsplash.com/@scottagoodwill?utm_medium=referral&amp;utm_campaign=photographer-credit&amp;utm_content=creditBadge"
-            target="_blank"
-            rel="noopener noreferrer"
-            title="Download free do whatever you want high-resolution photos from Scott Goodwill"
-            ><span style="display:inline-block;padding:2px 3px"
-              ><svg
-                xmlns="http://www.w3.org/2000/svg"
-                style="height:12px;width:auto;position:relative;vertical-align:middle;top:-2px;fill:white"
-                viewBox="0 0 32 32"
-              >
-                <title>unsplash-logo</title>
-                <path
-                  d="M10 9V0h12v9H10zm12 5h10v18H0V14h10v9h12v-9z"
-                ></path></svg></span
-            ><span style="display:inline-block;padding:2px 3px"
-              >Scott Goodwill</span
-            ></a
-          > -->
-
-          <img
-            class="d-block w-100 peopleCarouselImg"
-            src="./../../../assets/img/tent.jpg"
-            alt="2 slide"
-          />
-        </div>
-        <div class="carousel-item">
-          <img
-            class="d-block w-100 peopleCarouselImg"
-            src="./../../../assets/img/automobile.jpg"
-            alt="3 slide"
-          />
-        </div>
-        <div class="carousel-item">
-          <img
-            class="d-block w-100 peopleCarouselImg"
-            src="./../../../assets/img/adorable.jpg"
-            alt="4 slide"
-          />
-        </div>
-        <div class="carousel-item">
-          <img
-            class="d-block w-100 peopleCarouselImg"
-            src="./../../../assets/img/nike.jpg"
-            alt="5 slide"
-          />
-        </div>
-        <div class="carousel-item">
-          <img
-            class="d-block w-100 peopleCarouselImg"
-            src="./../../../assets/img/blue-jeans.jpg"
-            alt="6 slide"
-          />
-        </div>
-        <div class="carousel-item">
-          <img
-            class="d-block w-100 peopleCarouselImg"
-            src="./../../../assets/img/fila.jpg"
-            alt="7 slide"
-          />
-        </div>
-        <div class="carousel-item">
-          <img
-            class="d-block w-100 peopleCarouselImg"
-            src="./../../../assets/img/men-outfit.jpg"
-            alt="8 slide"
-          />
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="row">
-  <div class="col-lg-4 col-12">
-    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis molestias
-    sapiente, quod dolorum itaque odit. Deleniti dolor necessitatibus magnam
-    architecto optio ab a dolores, veritatis magni velit consectetur voluptates
-    et atque molestias eligendi! Harum, unde ducimus qui impedit eaque
-    temporibus veritatis fugit pariatur commodi deleniti debitis cupiditate.
-    Vero, vitae rem.
-  </div>
-  <div class="col-lg-4 col-12">
-    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia ad
-    recusandae modi totam qui itaque porro quasi. Quia earum vero, delectus at
-    quae quo maiores minus tenetur pariatur corrupti sapiente.
-  </div>
-  <div class="col-lg-4 col-12">
     <div class="row">
-      <div class="col-12">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt laborum
-        amet dolore saepe tenetur asperiores.
+      <div class="col">
+        <button class="btn btn-primary">Shop electric bikes</button>
       </div>
-      <div class="col-12 pt-3">
-        <button class="btn btn-primary">Get event details</button>
+    </div>
+  </div>
+  <div class="col-md-6">
+    <img
+      id="rock-climber"
+      class="col-12 offset-md-2 "
+      src="./../../../assets/img/rock_climber_318x480.jpg"
+      alt="rock climber"
+    />
+  </div>
+  <div id="feature" class="row p-2">
+    <div class="col-lg-6 col-12 text-center p-5">
+      <div
+        id="carouselSlides"
+        class="carousel slide carousel-fade"
+        data-ride="carousel"
+      >
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img
+              class="d-block w-100 peopleCarouselImg"
+              src="./../../../assets/img/caffeine-cellphone.jpg"
+              alt="1 slide"
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              class="d-block w-100 peopleCarouselImg"
+              src="./../../../assets/img/tent.jpg"
+              alt="2 slide"
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              class="d-block w-100 peopleCarouselImg"
+              src="./../../../assets/img/automobile.jpg"
+              alt="3 slide"
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              class="d-block w-100 peopleCarouselImg"
+              src="./../../../assets/img/adorable.jpg"
+              alt="4 slide"
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              class="d-block w-100 peopleCarouselImg"
+              src="./../../../assets/img/nike.jpg"
+              alt="5 slide"
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              class="d-block w-100 peopleCarouselImg"
+              src="./../../../assets/img/blue-jeans.jpg"
+              alt="6 slide"
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              class="d-block w-100 peopleCarouselImg"
+              src="./../../../assets/img/fila.jpg"
+              alt="7 slide"
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              class="d-block w-100 peopleCarouselImg"
+              src="./../../../assets/img/men-outfit.jpg"
+              alt="8 slide"
+            />
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-6 col-12 text-center p-5 my-auto">
+      <h2 class="font-weight-bold">
+        Looks the same. Made a whole lot smarter.
+      </h2>
+      <p>
+        Outdoor gear that makes you smarter by being safer. Shop
+      </p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col">
+      <hr />
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-lg-4 col-12">
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis molestias
+      sapiente, quod dolorum itaque odit. Deleniti dolor necessitatibus magnam
+      architecto optio ab a dolores, veritatis magni velit consectetur
+      voluptates et atque molestias eligendi! Harum, unde ducimus qui impedit
+      eaque temporibus veritatis fugit pariatur commodi deleniti debitis
+      cupiditate. Vero, vitae rem.
+    </div>
+    <div class="col-lg-4 col-12">
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia ad
+      recusandae modi totam qui itaque porro quasi. Quia earum vero, delectus at
+      quae quo maiores minus tenetur pariatur corrupti sapiente.
+    </div>
+    <div class="col-lg-4 col-12">
+      <div class="row">
+        <div class="col-12">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt laborum
+          amet dolore saepe tenetur asperiores.
+        </div>
+        <div class="col-12 pt-3">
+          <button class="btn btn-primary">Get event details</button>
+        </div>
       </div>
     </div>
   </div>
 </div>
-
+<hr />
 <!-- <div class="container-fluid">
 <div id="trending" class="row">
   <div class="col">
