--- a/src/app/components/trending/trending.component.scss
+++ b/src/app/components/trending/trending.component.scss
@@ -12,7 +12,7 @@ $font-h2:'Archivo Black',
 sans-serif;
 
 #trending {
-  background-color: #d8d8d8;
+  background-color: #fff;
 }
 
 h2 {
@@ -20,9 +20,9 @@ h2 {
 }
 
 #rock-climber {
-  object-fit: cover;
-  width: 100%;
-  height: 250px;
+  object-fit: scale-down;
+  width: auto;
+  height: auto;
 }
 
 // .row-full {
