order model, updated product validation, signout component, updated stylesheets

--- a/src/app/components/User_Component/account/account.component.css
+++ b/src/app/components/User_Component/account/account.component.css
@@ -1,1 +1,2 @@
-/* No CSS *//*# sourceMappingURL=account.component.css.map */
+@import url("https://fonts.googleapis.com/css?family=Archivo+Black|Domine:700|Roboto|Roboto+Condensed|Roboto+Slab:700&display=swap");
+/*# sourceMappingURL=account.component.css.map */
