--- a/src/app/components/page-not-found/page-not-found.component.css
+++ b/src/app/components/page-not-found/page-not-found.component.css
@@ -1,1 +1,2 @@
-/* No CSS *//*# sourceMappingURL=page-not-found.component.css.map */
+@import url("https://fonts.googleapis.com/css?family=Archivo+Black|Domine:700|Roboto|Roboto+Condensed|Roboto+Slab:700&display=swap");
+/*# sourceMappingURL=page-not-found.component.css.map */
