--- a/src/app/components/trending/trending.component.css
+++ b/src/app/components/trending/trending.component.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Domine:700|Roboto|Roboto+Slab:300&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Archivo+Black|Domine:700|Roboto|Roboto+Condensed|Roboto+Slab:700&display=swap");
 #trending {
   background-color: #fff;
 }
