--- a/src/app/components/employee-choice/employee-choice.component.css
+++ b/src/app/components/employee-choice/employee-choice.component.css
@@ -1,1 +1,2 @@
-/* No CSS *//*# sourceMappingURL=employee-choice.component.css.map */
+@import url("https://fonts.googleapis.com/css?family=Archivo+Black|Domine:700|Roboto|Roboto+Condensed|Roboto+Slab:700&display=swap");
+/*# sourceMappingURL=employee-choice.component.css.map */
