--- a/src/app/components/sign-out/sign-out.component.css
+++ b/src/app/components/sign-out/sign-out.component.css
@@ -1,22 +1,12 @@
 @import url("https://fonts.googleapis.com/css?family=Archivo+Black|Domine:700|Roboto|Roboto+Condensed|Roboto+Slab:700&display=swap");
-.peopleCarouselImg {
-  -o-object-fit: contain;
-     object-fit: contain;
-}
-
-#feature {
-  position: relative;
-}
-
-.pokodotted {
-  padding-top: 3px;
-}
-
 h2 {
   font-family: "Archivo Black", sans-serif;
+  font-size: 40px;
+  font-weight: 100 !important;
 }
 
-p {
+a {
   font-family: "Roboto", sans-serif;
+  font-size: 20px;
 }
-/*# sourceMappingURL=feature.component.css.map */
+/*# sourceMappingURL=sign-out.component.css.map */
