--- a/src/app/components/slider/slider.component.css
+++ b/src/app/components/slider/slider.component.css
@@ -1,2 +1,2 @@
-@import url("https://fonts.googleapis.com/css?family=Archivo+Black|Domine:700|Roboto|Roboto+Slab:700&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Archivo+Black|Domine:700|Roboto|Roboto+Condensed|Roboto+Slab:700&display=swap");
 /*# sourceMappingURL=slider.component.css.map */
