--- a/src/app/components/slider/slider.component.html
+++ b/src/app/components/slider/slider.component.html
@@ -1,5 +1,76 @@
-<div class="row">
-  <div *ngFor="let product of products" class="col">
-    <h3>Product name:{{ product.name }}</h3>
+<div id="feature" class="row p-2">
+  <div class="col-lg-6 col-12 text-center p-5">
+    <div
+      id="carouselSlides"
+      class="carousel slide carousel-fade"
+      data-ride="carousel"
+    >
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img
+            class="d-block w-100 peopleCarouselImg"
+            src="./../../../assets/img/caffeine-cellphone.jpg"
+            alt="1 slide"
+          />
+        </div>
+        <div class="carousel-item">
+          <img
+            class="d-block w-100 peopleCarouselImg"
+            src="./../../../assets/img/tent.jpg"
+            alt="2 slide"
+          />
+        </div>
+        <div class="carousel-item">
+          <img
+            class="d-block w-100 peopleCarouselImg"
+            src="./../../../assets/img/automobile.jpg"
+            alt="3 slide"
+          />
+        </div>
+        <div class="carousel-item">
+          <img
+            class="d-block w-100 peopleCarouselImg"
+            src="./../../../assets/img/adorable.jpg"
+            alt="4 slide"
+          />
+        </div>
+        <div class="carousel-item">
+          <img
+            class="d-block w-100 peopleCarouselImg"
+            src="./../../../assets/img/nike.jpg"
+            alt="5 slide"
+          />
+        </div>
+        <div class="carousel-item">
+          <img
+            class="d-block w-100 peopleCarouselImg"
+            src="./../../../assets/img/blue-jeans.jpg"
+            alt="6 slide"
+          />
+        </div>
+        <div class="carousel-item">
+          <img
+            class="d-block w-100 peopleCarouselImg"
+            src="./../../../assets/img/fila.jpg"
+            alt="7 slide"
+          />
+        </div>
+        <div class="carousel-item">
+          <img
+            class="d-block w-100 peopleCarouselImg"
+            src="./../../../assets/img/men-outfit.jpg"
+            alt="8 slide"
+          />
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="col-lg-6 col-12 text-center p-5 my-auto">
+    <h2 class="font-weight-bold">
+      Looks the same. Made a whole lot smarter.
+    </h2>
+    <p>
+      Outdoor gear that makes you smarter by being safer. Shop
+    </p>
   </div>
 </div>
